[gd_scene load_steps=50 format=3 uid="uid://bibruools7bs5"]

[ext_resource type="Script" path="res://Script/player.gd" id="1_4hp0x"]
[ext_resource type="Curve" uid="uid://cp3lmfh7jqiqe" path="res://Ressource/courbe_dodge.tres" id="2_tc1mu"]
[ext_resource type="PackedScene" uid="uid://cyp5tx1ggjbwv" path="res://Scene/epai.tscn" id="3_2evvi"]
[ext_resource type="PackedScene" uid="uid://b1rx583rnkssm" path="res://Scene/megaman_pitie_couleur.tscn" id="3_fs3kh"]
[ext_resource type="Texture2D" uid="uid://lst5x3o0yehg" path="res://Assets/GAP_EasyExplosions_Textures/Flare01.png" id="4_usvaa"]

[sub_resource type="SphereMesh" id="SphereMesh_wnhth"]

[sub_resource type="SphereShape3D" id="SphereShape3D_2v374"]

[sub_resource type="Curve" id="Curve_7xo62"]
_data = [Vector2(0.119048, 0.494505), 0.0, 0.0, 0, 0, Vector2(0.880952, 0.252747), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_r8ics"]
curve = SubResource("Curve_7xo62")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lormq"]
albedo_color = Color(0.294118, 1, 1, 1)
albedo_texture = SubResource("CurveTexture_r8ics")

[sub_resource type="CylinderMesh" id="CylinderMesh_qfrx6"]
material = SubResource("StandardMaterial3D_lormq")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xmysm"]
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
initial_velocity_max = 20.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dw3s7"]
transparency = 1
albedo_color = Color(1, 0.0705882, 0, 1)
albedo_texture = ExtResource("4_usvaa")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="PlaneMesh" id="PlaneMesh_bjfbh"]
material = SubResource("StandardMaterial3D_dw3s7")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_khn45"]

[sub_resource type="Curve3D" id="Curve3D_q32kf"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 2, 3, 0, 0, 0, 0, 0, 0, 0, 0, 3, 2, 0, 0, 0, 0, 0, 0, -2, 3, 0, 0, 0, 0, 0, 0, 0, 0, 3, -2, 0, 0, 0, 0, 0, 0, 2, 3, 0),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="Animation" id="Animation_pim52"]
length = 0.001
tracks/0/type = "scale_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Reference/megaman_pitie_couleur/Epai")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0.01, 0.01, 0.01)
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player/Reference/megaman_pitie_couleur/Epai/Epai_body/CollisionShape3D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "rotation_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Player/Reference/megaman_pitie_couleur")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, -0.332186, 0, 0, 0.943214)

[sub_resource type="Animation" id="Animation_l8whi"]
resource_name = "attack_test_extend"
tracks/0/type = "scale_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Facing/Attack")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 1, 1, 1, 0.366667, 1, 1, 1, 3, 0.6, 1, 1, 1, 3, 0.966667, 1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_74eh7"]
resource_name = "attaque_1"
length = 0.3
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Reference/megaman_pitie_couleur/Epai")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 1, 0, 0, 7.54979e-08, 0.0666667, 1, 0.819152, -2.50718e-08, -0.573576, -3.58063e-08, 0.3, 1, 0.899161, 2.15264e-08, 0.437619, 1.33796e-08)
tracks/1/type = "scale_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player/Reference/megaman_pitie_couleur/Epai")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 1, 1, 1, 0.3, 1, 1, 1, 1)
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Player/Reference/megaman_pitie_couleur/Epai/Epai_body/CollisionShape3D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_4a8dr"]
resource_name = "attaque_2"
length = 0.3
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Reference/megaman_pitie_couleur/Epai")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0.898794, 0, 0.438371, 0.1, 1, 0, 0.766044, 0, 0.642788, 0.3, 1, 0, -0.866025, 0, 0.5)
tracks/1/type = "scale_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player/Reference/megaman_pitie_couleur/Epai")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 1, 1, 1, 0.3, 1, 1, 1, 1)
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Player/Reference/megaman_pitie_couleur/Epai/Epai_body/CollisionShape3D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_mkfgo"]
resource_name = "attaque_3"
length = 0.7
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Reference/megaman_pitie_couleur/Epai")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 0.133333, 1, 0, 0, 0.5, 0.3, 1, 0, 0, -2, 0.7, 1, 0, 0, 0)
tracks/1/type = "scale_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player/Reference/megaman_pitie_couleur/Epai")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 1, 1, 1, 0.7, 1, 1, 1, 1)
tracks/2/type = "rotation_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Player/Reference/megaman_pitie_couleur/Epai")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 0, 1, 0, -4.37114e-08)
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Player/Reference/megaman_pitie_couleur/Epai/Epai_body/CollisionShape3D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_uat1t"]
resource_name = "damage_taken"

[sub_resource type="Animation" id="Animation_ooipn"]
resource_name = "dash_forward"
length = 0.57
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Reference/MeshPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 0.233333, 1, -0.258819, 0, 0, 0.965926, 0.4, 1, 1, 0, 0, -4.37114e-08, 0.566667, 1, 8.74228e-08, 0, 0, 1)
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player:index_courbe")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.566667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Player:invulnerable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "rotation_3d"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Player/Reference/megaman_pitie_couleur")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 0.0666667, 1, -0.258819, 0, 0, 0.965926, 0.266667, 1, -0.332186, 0, 0, 0.943214, 0.433333, 1, -0.258819, 0, 0, 0.965926, 0.566667, 1, 8.74228e-08, 0, 0, 1)

[sub_resource type="Animation" id="Animation_8kcb0"]
resource_name = "rolling"
length = 0.57
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Reference/MeshPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 0.233333, 1, -0.258819, 0, 0, 0.965926, 0.4, 1, 1, 0, 0, -4.37114e-08, 0.566667, 1, 8.74228e-08, 0, 0, 1)
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player:index_courbe")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.566667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Player:invulnerable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "rotation_3d"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Player/Reference/megaman_pitie_couleur")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 0.233333, 1, -0.258819, 0, 0, 0.965926, 0.4, 1, 1, 0, 0, -4.37114e-08, 0.566667, 1, 8.74228e-08, 0, 0, 1)

[sub_resource type="Animation" id="Animation_y4vnb"]
resource_name = "sword_in"
length = 0.2
tracks/0/type = "scale_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Reference/megaman_pitie_couleur/Epai")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0.01, 0.01, 0.01, 0.2, 1, 1, 1, 1)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player/Reference/megaman_pitie_couleur/Epai")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0.2, 1, 0, 1, 0, -4.37114e-08)

[sub_resource type="Animation" id="Animation_ttpuv"]
resource_name = "sword_out"
length = 0.2
tracks/0/type = "scale_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Reference/megaman_pitie_couleur/Epai")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 1, 1, 1, 0.2, 1, 0.01, 0.01, 0.01)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player/Reference/megaman_pitie_couleur/Epai")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 1, 0, 0)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v8emc"]
_data = {
"RESET": SubResource("Animation_pim52"),
"attack_test_extend": SubResource("Animation_l8whi"),
"attaque_1": SubResource("Animation_74eh7"),
"attaque_2": SubResource("Animation_4a8dr"),
"attaque_3": SubResource("Animation_mkfgo"),
"damage_taken": SubResource("Animation_uat1t"),
"dash_forward": SubResource("Animation_ooipn"),
"rolling": SubResource("Animation_8kcb0"),
"sword_in": SubResource("Animation_y4vnb"),
"sword_out": SubResource("Animation_ttpuv")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0pw4k"]
animation = &"attaque_1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rbu43"]
animation = &"attaque_2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mq5an"]
animation = &"attaque_3"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rcikh"]
animation = &"dash_forward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ek8ot"]
animation = &"rolling"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ioh7q"]
animation = &"sword_in"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mqg46"]
animation = &"sword_out"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1bo6k"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qhqkf"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_n13kg"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5vosa"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_16a21"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vn6e0"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_p331p"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_uss4g"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_edlsi"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_uqis2"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yt3y5"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hmmch"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mw60p"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_p6um8"]
states/End/position = Vector2(423, 253)
states/Start/position = Vector2(-13, 133)
states/attaque_1/node = SubResource("AnimationNodeAnimation_0pw4k")
states/attaque_1/position = Vector2(349, 60)
states/attaque_2/node = SubResource("AnimationNodeAnimation_rbu43")
states/attaque_2/position = Vector2(504, 91)
states/attaque_3/node = SubResource("AnimationNodeAnimation_mq5an")
states/attaque_3/position = Vector2(658, 108)
states/dash_forward/node = SubResource("AnimationNodeAnimation_rcikh")
states/dash_forward/position = Vector2(45.988, 258.951)
states/rolling/node = SubResource("AnimationNodeAnimation_ek8ot")
states/rolling/position = Vector2(121.988, 218.951)
states/sword_in/node = SubResource("AnimationNodeAnimation_ioh7q")
states/sword_in/position = Vector2(178, 51)
states/sword_out/node = SubResource("AnimationNodeAnimation_mqg46")
states/sword_out/position = Vector2(332, 162)
transitions = ["attaque_1", "attaque_2", SubResource("AnimationNodeStateMachineTransition_1bo6k"), "attaque_2", "attaque_3", SubResource("AnimationNodeStateMachineTransition_qhqkf"), "Start", "sword_in", SubResource("AnimationNodeStateMachineTransition_n13kg"), "sword_in", "attaque_1", SubResource("AnimationNodeStateMachineTransition_5vosa"), "sword_in", "sword_out", SubResource("AnimationNodeStateMachineTransition_16a21"), "attaque_1", "sword_out", SubResource("AnimationNodeStateMachineTransition_vn6e0"), "attaque_2", "sword_out", SubResource("AnimationNodeStateMachineTransition_p331p"), "attaque_3", "sword_out", SubResource("AnimationNodeStateMachineTransition_uss4g"), "sword_out", "End", SubResource("AnimationNodeStateMachineTransition_edlsi"), "Start", "rolling", SubResource("AnimationNodeStateMachineTransition_uqis2"), "rolling", "End", SubResource("AnimationNodeStateMachineTransition_yt3y5"), "Start", "dash_forward", SubResource("AnimationNodeStateMachineTransition_hmmch"), "dash_forward", "End", SubResource("AnimationNodeStateMachineTransition_mw60p")]
graph_offset = Vector2(-330.012, 38.9508)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_crp8n"]
nodes/Player_state_machine/node = SubResource("AnimationNodeStateMachine_p6um8")
nodes/Player_state_machine/position = Vector2(0, 100)
node_connections = [&"output", 0, &"Player_state_machine"]

[node name="SUPlayer" type="Node3D"]
process_mode = 3

[node name="Player" type="CharacterBody3D" parent="." node_paths=PackedStringArray("anim_player", "anim_tree", "camera", "springarm", "attack", "facing", "meshplayer", "ref", "direc_move", "vie_ui", "freezeframe", "floattimer", "jumpbar", "attacktimer", "particle")]
process_mode = 1
script = ExtResource("1_4hp0x")
anim_player = NodePath("../AnimationPlayer")
anim_tree = NodePath("../AnimationTree")
camera = NodePath("SpringArm3D/Camera3D")
springarm = NodePath("SpringArm3D")
attack = NodePath("Facing/Attack")
facing = NodePath("Facing")
meshplayer = NodePath("Reference/megaman_pitie_couleur")
ref = NodePath("Reference")
direc_move = NodePath("Dir_move")
courbe_dodge = ExtResource("2_tc1mu")
health = 10.0
vie_ui = NodePath("../Control/ProgressBar")
freezeframe = NodePath("../FreezeFrame")
floattimer = NodePath("../FloatTimer")
gravity = -7.0
jumpbar = NodePath("../Control/JumpBar")
attacktimer = NodePath("../AttackTimer")
particle = NodePath("Reference/megaman_pitie_couleur/Epai/GPUParticles3D")

[node name="SpringArm3D" type="SpringArm3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0)
spring_length = 5.0

[node name="Camera3D" type="Camera3D" parent="Player/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 0.776255, 0.630419, 0, -0.630419, 0.776255, 0, 0, 0)

[node name="Facing" type="Node3D" parent="Player"]

[node name="Attack" type="Area3D" parent="Player/Facing"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player/Facing/Attack"]
mesh = SubResource("SphereMesh_wnhth")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player/Facing/Attack"]
shape = SubResource("SphereShape3D_2v374")

[node name="Reference" type="Node3D" parent="Player"]
process_mode = 1

[node name="MeshPlayer" type="MeshInstance3D" parent="Player/Reference"]
visible = false
mesh = SubResource("CylinderMesh_qfrx6")
skeleton = NodePath("../..")

[node name="megaman_pitie_couleur" parent="Player/Reference" instance=ExtResource("3_fs3kh")]
transform = Transform3D(1, 0, 0, 0, 0.779305, 0.626645, 0, -0.626645, 0.779305, 0, 0, 0)

[node name="Epai" parent="Player/Reference/megaman_pitie_couleur" instance=ExtResource("3_2evvi")]
transform = Transform3D(0.01, 0, 0, 0, -0.01, -1.50996e-09, 0, 1.50996e-09, -0.01, 0, 0, 0)

[node name="CollisionShape3D" parent="Player/Reference/megaman_pitie_couleur/Epai/Epai_body" index="0"]
disabled = false

[node name="GPUParticles3D" type="GPUParticles3D" parent="Player/Reference/megaman_pitie_couleur/Epai"]
transform = Transform3D(100, 0, 0, 0, 100, 1.74846e-05, 0, -1.74846e-05, 100, 0, 0, 0)
emitting = false
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_xmysm")
draw_pass_1 = SubResource("PlaneMesh_bjfbh")

[node name="HitboxPlayer" type="CollisionShape3D" parent="Player"]
shape = SubResource("CylinderShape3D_khn45")

[node name="Dir_move" type="MeshInstance3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)

[node name="Area3D" type="Area3D" parent="Player"]

[node name="HitboxPlayer" type="CollisionShape3D" parent="Player/Area3D"]
shape = SubResource("CylinderShape3D_khn45")

[node name="Path3D" type="Path3D" parent="Player"]
curve = SubResource("Curve3D_q32kf")

[node name="PathFollow3D" type="PathFollow3D" parent="Player/Path3D"]
transform = Transform3D(-0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, -0.707107, 2, 3, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
deterministic = true
libraries = {
"": SubResource("AnimationLibrary_v8emc")
}

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ProgressBar" type="ProgressBar" parent="Control"]
layout_mode = 0
offset_left = 79.0
offset_top = 54.0
offset_right = 351.0
offset_bottom = 81.0
max_value = 10.0
value = 10.0
show_percentage = false

[node name="JumpBar" type="ProgressBar" parent="Control"]
layout_mode = 0
offset_left = 978.0
offset_top = 37.0
offset_right = 1719.0
offset_bottom = 778.0
scale = Vector2(0.2, 0.2)
max_value = 1.0
value = 1.0
fill_mode = 3

[node name="AnimationTree" type="AnimationTree" parent="."]
process_mode = 1
deterministic = false
tree_root = SubResource("AnimationNodeBlendTree_crp8n")
anim_player = NodePath("../AnimationPlayer")

[node name="FreezeFrame" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="FloatTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Player/Reference/megaman_pitie_couleur/Epai/Epai_body" to="Player" method="_on_epai_body_area_entered"]
[connection signal="body_entered" from="Player/Reference/megaman_pitie_couleur/Epai/Epai_body" to="Player" method="_on_epai_body_body_entered"]
[connection signal="body_entered" from="Player/Area3D" to="Player" method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Player/Area3D" to="Player" method="_on_area_3d_body_exited"]
[connection signal="animation_finished" from="AnimationTree" to="Player" method="_on_animation_tree_animation_finished"]
[connection signal="timeout" from="FreezeFrame" to="Player" method="_on_freeze_frame_timeout"]
[connection signal="timeout" from="FloatTimer" to="Player" method="_on_float_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="Player" method="_on_attack_timer_timeout"]

[editable path="Player/Reference/megaman_pitie_couleur/Epai"]
